--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,63 @@
+<style>.navbar-header {
+    position: relative;
+    width: auto;
+    height: 25%;
+    background-color: lightblue;
+    text-align: center;
+    font-weight: bolder;
+    font-size: x-large;
+    border: 1px solid black;
+    padding: 1px;
+}
 
+h1 {
+    text-align: center;
+}
+
+#navbar-collapse-1 {
+    position: relative;
+    text-align: center;
+    background-color: rgb(243, 180, 180);
+    font-weight: bold;
+    border: 1px solid black;
+    visibility: visible-xs;
+}
+
+#items {
+    width: 350px;
+    height: 250px;
+    padding-bottom: 20px;
+    position: relative;
+    border: 3px solid black;
+    padding: 1px;
+    margin-bottom: 5px;
+    clear: both;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+span {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: x-large;
+}
+
+p1 {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: x-large;
+    margin-left: 120px;
+}
+
+p {
+    position: absolute;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
+    margin-top: 50px;
+}
+
+</style>
